# raytracer

./: CMakeLists.txt  raytracer
src/: Camera.hpp  Color.hpp  Light.hpp  Object.hpp  Plane.cpp  Plane.hpp  Ray.hpp  Raytracer.cpp  Raytracer.hpp  Source.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Utils.cpp  Utils.hpp  Vect.cpp  Vect.hpp  main.cpp
